--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 server:
-  port: 7777
-  context-path: /scala-boot
+  port: 8080
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=UTC
     username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/imoocbootscala
-  jpa:
-    hibernate:
-      ddl-auto: update
-    database: mysql
+    password: 123456
+
+mybatis:
+  mapper-locations: classpath:mybatis/mapper/*.xml
+
